<resources>
    <string name="app_name">FitooZone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_nto_fitoozone">Welcome \nto FitooZone</string>
    <string name="already_have_account">Already have account?</string>
    <string name="fitoozone_has_workouts_on_demand_that_you_ncan_find_based_on_how_much_time_you_have">FitooZone has workouts on demand that \nyou can find based on how much time you have</string>
    <string name="get_started">Get Started</string>
    <string name="workout_categories">Workout Categories</string>
    <string name="onboarding1_tvdes">Workout categories will help you gain strength, get in better shape and embrace a healthy lifestyle</string>
    <string name="custom_workouts">Custom Workouts</string>
    <string name="create_and_save_your_own_custom_workouts_name_your_workouts_save_them_and_they_ll_automatically_appear_when_you_re_ready_to_workout">Create and save your own custom workouts. Name your workouts, save them, and they’ll automatically appear</string>
    <string name="start_training">Start Training</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_with">Sign In With</string>
    <string name="phone">Phone</string>
    <string name="full_name">Full Name</string>
    <string name="skip">Skip</string>
    <string name="choose_gender">Choose gender</string>
    <string name="choose_main_goal">Choose main goal</string>
    <string name="select_birth_date">Select birth date</string>
    <string name="select_goal_weight">Select goal weight</string>
    <string name="choose_training_level">Choose training level</string>
    <string name="feet">Feet</string>
    <string name="centimeter">Centimeter</string>
    <string name="cm">cm</string>
    <string name="pound">Pound</string>
    <string name="kilogram">Kilogram</string>
    <string name="kg">kg</string>
    <string name="start">Start</string>
    <string name="home">Home</string>
    <string name="training">Training</string>
    <string name="activity">Activity</string>
    <string name="profile">Profile</string>
    <string name="alarm">Alarm</string>
    <string name="search">Search</string>
    <string name="category">Category</string>
    <string name="popular_workouts">Popular Workouts</string>
    <string name="workouts_80">Workouts: 80</string>
    <string name="beginner">Beginner</string>
    <string name="rapid_lower_body">Rapid Lower Body</string>
    <string name="exercises">Exercises</string>
    <string name="already_have_an_account_sign_in">already have an account? Sign In</string>
</resources>